--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.6.3",
-    "semver": "^7.7.1",
-    "simple-update-notifier": "^2.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^2.0.7"
   },
   "author": "Manuel Santos",
   "license": "GPL-2.0-only"
