--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.6.3",
     "simple-update-notifier": "^2.0.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "morgan": "^1.10.0",
+    "rotating-file-stream": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
