Añadido swagger-doc

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "simple-update-notifier": "^2.0.0",
     "uuid": "^9.0.0",
     "morgan": "^1.10.0",
-    "rotating-file-stream": "^3.0.0"
+    "rotating-file-stream": "^3.0.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
