--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-DATABASE_URL=your_database_connection_string
 JWT_SECRET=your_jwt_secret_key
 REFRESH_TOKEN_SECRET=your_refresh_token_secret_key
 EXTERNAL_API_URL=https://pokeapi.co/api/v2
@@ -9,3 +8,7 @@ DEFAULT_LOGIN=admin
 DEFAULT_PASS=admin
 JWT_EXPIRES_IN=1h
 REFRESH_TOKEN_EXPIRES_IN=7d
+DB_NAME=nombre_de_tu_base_de_datos
+DB_USER=tu_usuario
+DB_PASSWORD=tu_contraseña
+DB_HOST=localhost
