--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "morgan": "^1.10.0",
     "rotating-file-stream": "^3.0.0",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "mysql2": "^3.1.0",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
