Añadido mensaje de mail a variable del entorno

--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 JWT_SECRET=your_jwt_secret_key
 REFRESH_TOKEN_SECRET=your_refresh_token_secret_key
 EXTERNAL_API_URL=https://pokeapi.co/api/v2
-EMAIL_USER=mail@example.com
-EMAIL_PASS=pass
 ERROR_NOTIFICATION_EMAIL=notification_email@gmail.com
 DEFAULT_LOGIN=admin
 DEFAULT_PASS=admin
@@ -12,3 +10,9 @@ DB_NAME=nombre_de_tu_base_de_datos
 DB_USER=tu_usuario
 DB_PASSWORD=tu_contraseña
 DB_HOST=localhost
+
+EMAIL_USER=tu_email@gmail.com
+EMAIL_PASS=tu_contraseña
+ERROR_NOTIFICATION_EMAIL=destinatario@dominio.com
+EMAIL_SUBJECT=API Error Notification
+EMAIL_TEXT=An error occurred:
