--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ DB_NAME=nombre_de_tu_base_de_datos
 DB_USER=tu_usuario
 DB_PASSWORD=tu_contraseña
 DB_HOST=localhost
+EXT_LOGIN=emilys
+EXT_PASS=emilyspass
 
 EMAIL_USER=tu_email@gmail.com
 EMAIL_PASS=tu_contraseña
