--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest --config jest.config.mjs"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -16,26 +16,34 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.6.3",
-    "simple-update-notifier": "^2.0.0",
-    "uuid": "^9.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.1.0",
+    "nodemailer": "^6.6.3",
     "rotating-file-stream": "^3.0.0",
+    "sequelize": "^6.6.5",
+    "simple-update-notifier": "^2.0.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
-    "mysql2": "^3.1.0",
-    "sequelize": "^6.6.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "jest": "^29.0.0",
-    "babel-jest": "^29.0.0",
     "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0"
+    "@babel/preset-env": "^7.0.0",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.0.0",
+    "jest": "^29.0.0",
+    "nodemon": "^3.1.9"
   },
   "babel": {
     "presets": [
-      ["@babel/preset-env", { "targets": { "node": "current" } }]
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   },
   "author": "Manuel Santos",
