--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest --config jest.config.mjs"
+    "test": "mocha tests/**/*.test.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.1.0",
     "nodemailer": "^6.6.3",
     "rotating-file-stream": "^3.0.0",
     "sequelize": "^6.6.5",
-    "simple-update-notifier": "^2.0.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^9.0.0"
@@ -29,10 +26,10 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "axios-mock-adapter": "^1.22.0",
-    "babel-jest": "^29.0.0",
-    "jest": "^29.0.0",
-    "nodemon": "^3.1.9"
+    "chai": "^5.2.0",
+    "mocha": "^11.1.0",
+    "nodemon": "^3.1.9",
+    "sinon": "^19.0.2"
   },
   "babel": {
     "presets": [
